--- a/style.css
+++ b/style.css
@@ -9,3 +9,25 @@
 .heading {
 
 }
+
+
+.image-container {
+    width: 200px;
+    height: 200px;
+    background-image: url("images/placeholder.png");
+    position: relative;
+    float: left;
+    margin-bottom: 20px;
+}
+
+.label {
+    background-color:#4aaaa5;
+    color: white;
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    bottom:-10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+}
